03-todo-web-application-mysql/backup/02-final-backup-at-end-of-course/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  type: ClusterIP
  ports:
  - name: "3306"
    port: 3306 # POD port
    targetPort: 3306 # Container port
  selector:
    io.kompose.service: mysql
