03-todo-web-application-mysql/backup/02-final-backup-at-end-of-course/todo-web-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: todo-web-application
  name: todo-web-application
spec:
  type: NodePort
  ports:
  - name: "8080"
#    nodePort: 30701 # commented when ingress is used
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: todo-web-application
