03-todo-web-application-mysql/backup/02-final-backup-at-end-of-course/ingress-resources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-todo
spec:
  backend:
    serviceName: todo-web-application
    servicePort: 8080
